--- a/CarParkingApp/package.json
+++ b/CarParkingApp/package.json
@@ -19,11 +19,13 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-image-picker": "^5.3.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
