--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-react-native": "^0.27.2",
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.13",
+    "react-native-dotenv": "^3.4.8",
     "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.2",
@@ -36,6 +38,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/node": "^20.2.3",
     "@types/react": "^18.2.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
