--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,13 @@
     "@stripe/stripe-react-native": "^0.27.2",
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "axios": "^1.4.0",
+    "lottie-react-native": "^5.1.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.13",
-
-
     "react-native-dotenv": "^3.4.8",
     "react-native-image-picker": "^5.3.1",
-
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
