--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "axios": "^1.4.0",
     "lottie-react-native": "^5.1.6",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
