--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-react-native": "^0.27.2",
     "@types/react-native-onboarding-swiper": "^1.1.4",
     "axios": "^1.4.0",
+    "formik": "^2.4.0",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -31,7 +32,8 @@
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^8.0.5",
-    "rn-range-slider": "^2.2.2"
+    "rn-range-slider": "^2.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
